# assetreturns

./: INSTALL-NIX.md  README.md  assetreturns.py  flake.nix  notepad.ipynb  property_purchase_fees.ipynb  pyproject.toml  test_assetreturns.py
