[project]
name = "assetreturns"
version = "0.1.0"
description = "Asset returns calculator"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0.0",
    "numpy-financial>=1.0.0",
    "pandas>=2.2.0",
    "tabulate>=0.9.0",
    "altair>=5.0.0",
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []
